--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "mongodb-connection-string-url": "^3.0.0",
     "mongoose": "^6.7.5"
   },
+  "engines": {
+    "node": ">=14.20.1"
+  },
   "devDependencies": {
     "nodemon": "^3.0.1"
   }
